crates/uitest/fixtures/ty_check/nested_storage_map_contract_field.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/nested_storage_map_contract_field.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ nested_storage_map_contract_field.fe:4:17
  │
4 │     mut nested: StorageMap<u256, StorageMap<u256, u256>>,
  │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `StorageMap<u256, u256, _>` doesn't implement `StorageMapValue`
